--- a/landing/index.html
+++ b/landing/index.html
@@ -37,7 +37,7 @@
 <div class="col-sm-12">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="images/company_logo.jpg"/></a>
+          <a class="navbar-brand" href="/landing/index.html"><img src="images/company_logo.jpg"/></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -106,13 +106,13 @@
                 <a class="nav-link active" href="#">    </a>
               </li>
              <li class="nav-item">
-               <a class="nav-link active " href="#"><i class="fa fa-user"style="font-size: 25px;"></i></a>
+               <a class="nav-link active " href="/Md Arif/signup.html"><i class="fa fa-user"style="font-size: 25px;"></i></a>
              </li>
              <li class="nav-item">
                 <a class="nav-link active" href="#">    </a>
               </li>
              <li class="nav-item">
-               <a class="nav-link active" href="#"><i class="fa fa-shopping-cart"style="font-size:25px;"></i></a>
+               <a class="nav-link active" href="/Md Arif/gotocart.html"><i class="fa fa-shopping-cart"style="font-size:25px;"></i></a>
              </li>
        
             
