--- a/By category/skin care/index.html
+++ b/By category/skin care/index.html
@@ -40,7 +40,7 @@
                     <a class="nav-link active" href="#">ALL PRODUCTS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">BESTSELLERS </a>
+                    <a class="nav-link active" href="/Bella-Vita-Organic/Md Arif/product.html">BESTSELLERS </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="#">  SELFIE SWITCH <sup style="background-color:#f3c746;">New</sup></a>
@@ -100,13 +100,13 @@
                 <a class="nav-link active" href="#">    </a>
               </li>
              <li class="nav-item">
-               <a class="nav-link active " href="#"><i class="fa fa-user-o"style="font-size: 25px;"></i></a>
+               <a class="nav-link active " href="/Bella-Vita-Organic/Md Arif/signup.html"><i class="fa fa-user-o"style="font-size: 25px;"></i></a>
              </li>
              <li class="nav-item">
                 <a class="nav-link active" href="#">    </a>
               </li>
              <li class="nav-item">
-               <a class="nav-link active" href="#"><i class="fa fa-shopping-cart"style="font-size:25px;"></i></a>
+               <a class="nav-link active" href="/Bella-Vita-Organic/Md Arif/gotocart.html"><i class="fa fa-shopping-cart"style="font-size:25px;"></i></a>
              </li>
        
             
@@ -168,6 +168,7 @@
 <!--end------slider-->
 <!--categree-->
 </br>
+
 <div class="row">
   <div class="col-sm-12">
     <p style="margin-left: 15px;">Home >  Natural & Ayurvedic Beauty Care Products </p>
@@ -236,6 +237,7 @@
 
 </div>
 </div>
+
 <!--end categree-->
 <!--footer-->
 <!--first line-->
