--- a/By category/skin care/skincare.html
+++ b/By category/skin care/skincare.html
@@ -103,14 +103,14 @@
               <a class="nav-link active" href="#">    </a>
             </li>
            <li class="nav-item">
-             <a class="nav-link active " href="#">
+             <a class="nav-link active " href="/Bella-Vita-Organic/Md Arif/signup.html">
                <i class="fa fa-user"style="font-size: 25px;"></i></a>
            </li>
            <li class="nav-item">
               <a class="nav-link active" href="#">    </a>
             </li>
            <li class="nav-item">
-             <a class="nav-link active" href="#"><i class="fa fa-shopping-cart"style="font-size:25px;"></i></a>
+             <a class="nav-link active" href="/Bella-Vita-Organic/Md Arif/gotocart.html"><i class="fa fa-shopping-cart"style="font-size:25px;"></i></a>
            </li>
       
           
