--- a/By category/signup.html
+++ b/By category/signup.html
@@ -97,6 +97,10 @@
     document.querySelector("#create").addEventListener("mouseout",function(){
         document.querySelector("#create").style.backgroundColor="black";
     })
+    document.querySelector("#create").addEventListener("click",function(){
+       //window.location.href = "index.html";
+        
+     });
 
 //     font-family: 'Roboto Serif', sans-serif;
 // font-family: 'Sen', sans-serif;
