--- a/Md Arif/buynow.html
+++ b/Md Arif/buynow.html
@@ -42,7 +42,7 @@
         btn1.style.height="37px";
         btn1.addEventListener("click",function(){
              
-             window.location.href = "goToCard.html";
+             window.location.href = "gotocart.html";
         });
         var btn2=document.createElement("button");
         btn2.innerText="CHECK OUT";
