--- a/Md Arif/forgot.html
+++ b/Md Arif/forgot.html
@@ -115,7 +115,7 @@
 <body>
     <div id="container">
         <div id="home1">
-            <button class="home" onclick="window.location.href='index.html'">Home</button>
+            <button class="home" onclick="window.location.href='/Bella-Vita-Organic/By category/skin care/index.html'">Home</button>
             <button class="home">>  Account</button>
         </div>
         <div class="account">
