--- a/landing/index.html
+++ b/landing/index.html
@@ -47,10 +47,10 @@
                     <a class="nav-link active" href="#">ALL PRODUCTS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">BESTSELLERS </a>
+                    <a class="nav-link active" href="/Md Arif//product.html">BESTSELLERS </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">  SELFIE SWITCH <sup style="background-color:#f3c746;">New</sup></a>
+                    <a class="nav-link active" href="/SelfieSwitch.html">  SELFIE SWITCH <sup style="background-color:#f3c746;">New</sup></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="#">BUILD A BOX </a>
@@ -97,7 +97,7 @@
                   </li>
                   
                     <li class="nav-item">
-               <a class="nav-link active" href="#"><i class="fa fa-search" style="font-size: 25px;"></i></a>
+               <a class="nav-link active" href=""><i class="fa fa-search" style="font-size: 25px;"></i></a>
              </li>
              <li class="nav-item">
                 <a class="nav-link active" href="#">    </a>
@@ -106,7 +106,7 @@
                 <a class="nav-link active" href="#">    </a>
               </li>
              <li class="nav-item">
-               <a class="nav-link active " href="/Md Arif/signup.html"><i class="fa fa-user"style="font-size: 25px;"></i></a>
+               <a class="nav-link active " href="/Md Arif/signin.html"><i class="fa fa-user"style="font-size: 25px;"></i></a>
              </li>
              <li class="nav-item">
                 <a class="nav-link active" href="#">    </a>
