--- a/Md Arif/buynow.html
+++ b/Md Arif/buynow.html
@@ -55,7 +55,7 @@
         btn2.style.width="148px";
         btn2.style.height="37px";
         btn2.addEventListener("click",function(){
-            window.location.href="payment.html"
+            window.location.href="../payment.html"
         })
         var divebtn=document.createElement("div");
         divebtn.append(btn1,btn2);
