--- a/Md Arif/gotocart.html
+++ b/Md Arif/gotocart.html
@@ -264,6 +264,6 @@
    }
    document.querySelector("#checkout").addEventListener("click",function(){
        localStorage.setItem("totalpayment",total)
-       window.location.href="payment.html"
+       window.location.href="../payment.html"
    })
 </script>
