--- a/Md Arif/signup.html
+++ b/Md Arif/signup.html
@@ -56,7 +56,7 @@
 <body>
     <div id="container">
         <div id="home">
-            <button>Home  ></button>
+            <button style="cursor: pointer;" onClick="window.location.href='/landing/index.html'">Home  ></button>
             <p >Create Accoun</p>
         </div>
         <div class="p1">CREATE AN ACCOUNT</div>
