--- a/landing/index.html
+++ b/landing/index.html
@@ -185,41 +185,41 @@
       <hr />
       <div class="categre_menu">
         <ul class="list_item">
-          <li><a href="">All Products</a></li>
-          <li><a href="">Bestsellers</a></li>
+          <li><a href="/naquee/Allproduct.html">All Products</a></li>
+          <li><a href="/Md Arif/product.html">Bestsellers</a></li>
           <li><a href="">Offers</a></li>
-          <li><a href="">SELFIE SWITCH</a></li>
+          <li><a href="/SelfieSwitch.html">SELFIE SWITCH</a></li>
           <li><a href="">Build A Box</a></li>
           <li onClick="hide1()" style="cursor: pointer">
             By Category<i class="fas fa-angle-down icon1"></i>
             <ul class="category1 disp disp1">
-              <li><a href="/skin care/skincare.html">Skin Care</a></li>
-              <li><a href="">Hair Care</a></li>
-              <li><a href="">Face Care</a></li>
-              <li><a href="">Body Care</a></li>
+              <li><a href="/menu/By category/skin care/skincare.html">Skin Care</a></li>
+              <li><a href="/menu/By category/hair care/skincare.html">Hair Care</a></li>
+              <li><a href="/menu/By category/face care/skincare.html">Face Care</a></li>
+              <li><a href="/menu/By category/body care/skincare.html">Body Care</a></li>
             </ul>
           </li>
           <li onClick="hide2()" style="cursor: pointer">
             By Concern<i class="fas fa-angle-down icon1"></i>
             <ul class="category2 disp disp1">
-              <li><a href="">Acne & Pinples</a></li>
-              <li><a href="">Oily Skin</a></li>
-              <li><a href="">Tanning</a></li>
-              <li><a href="">Underarm Kightening</a></li>
+              <li><a href="/menu/By concern/Acne & pinmple/skincare.html">Acne & Pinples</a></li>
+              <li><a href="/menu/By concern/Oily skin/skincare.html">Oily Skin</a></li>
+              <li><a href="/menu/By concern/Tanning/skincare.html">Tanning</a></li>
+              <li><a href="/menu/By concern/underarm Lighting/skincare.html">Underarm Kightening</a></li>
             </ul>
           </li>
           <li onClick="hide3()" style="cursor: pointer">
             By Gradient<i class="fas fa-angle-down icon1"></i>
             <ul class="category3 disp disp1">
-              <li><a href="">Aloevera</a></li>
-              <li><a href="">Coffee</a></li>
-              <li><a href="">Honey</a></li>
-              <li><a href="">Neem</a></li>
+              <li><a href="/landing/index.html">Aloevera</a></li>
+              <li><a href="/landing/index.html">Coffee</a></li>
+              <li><a href="/landing/index.html">Honey</a></li>
+              <li><a href="/landing/index.html">Neem</a></li>
             </ul>
           </li>
-          <li><a href="">Combo</a></li>
-          <li><a href="">Our Celebrities</a></li>
-          <li><a href="">Natural Soap</a></li>
+          <li><a href="/landing/index.html">Combo</a></li>
+          <li><a href="/landing/index.html">Our Celebrities</a></li>
+          <li><a href="/landing/index.html">Natural Soap</a></li>
         </ul>
       </div>
     </div>
