--- a/Md Arif/signin.html
+++ b/Md Arif/signin.html
@@ -11,6 +11,10 @@
     <style>
         #container{
             margin-left:50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         #form>input{
             width:250px;
