--- a/Md Arif/signin.html
+++ b/Md Arif/signin.html
@@ -67,7 +67,7 @@
          <button id="login">LOGIN</button>
          <br>
 
-         <button id="forgot">Forgot your password?</button>
+         <button id="forgot"onClick="window.location.href='/Md Arif/forgot.html'" style="cursor: pointer;">Forgot your password?</button>
          <br>
          <button id="create" onclick="window.location.href='signup.html'" >CREATE AN ACCOUNT</button>
          
